tests/snapshots/oracle_trace_v1__rm_file_no_context_stripped.snap
---
source: tests/oracle_trace_v1.rs
assertion_line: 108
expression: normalised
---

Trace

                                            command │ rm foo
  24: (rule (command "rm")                          │
        (context                                    │
         (and (anywhere "-r"                        │
                        "--recursive")              │
              …))                                   │
        (effect                                     │ → :deny "Recursive deletion from root"
         :deny "Recursive deletion from root"))     │
                                                    │
  29: (rule (command "rm")                          │
        (args                                       │
         (when (and                                 │
                (build-mode                         │
                 (or                                │
                  (has                              │ no
                   [:claude-code/permission-mode    │
                    "acceptEdits"])                 │
                  (has [:opencode/agent             │ no
                        "build"])))                 │
                …)                                  │
           <if-effect>)))                           │
                                                    │
  37: (rule (command "rm")                          │
        (context                                    │
         (build-mode                                │
          (or                                       │
           (has                                     │ no
            [:claude-code/permission-mode           │
             "acceptEdits"])                        │
           (has                                     │ no
            [:opencode/agent "build"]))))           │
        (effect                                     │ → :allow "Non-recursive delete is allowed"
         :allow "Non-recursive delete is allowed")) │
                                   No matching rule │ → :ask (default)

Result

  rm foo

  → :ask "Rules for `rm` exist but context or arguments did not match any patterns"

  config: <config-path>
