tests/snapshots/oracle_trace_v1__rm_recursive_build_other_raw.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

[1mTrace[0m

                                                      [2mcommand[0m [2m│[0m [1mrm -r /other/path[0m
                                                        [2mfacts[0m [2m│[0m [38;2;120;120;255m:opencode/agent[0m [32m"build"[0m
  [2m24: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"rm"[0m[2m)[0m                                    [2m│[0m
        [2m([0m[34margs[0m [2m([0mand [2m([0m[34manywhere[0m [32m"-r"[0m[2m)[0m                            [2m│[0m [2m"-r" ∈ {"-r", "/other/path"} [0m[2m→[0m [1;32myes[0m
                   [2m([0m[34manywhere[0m [32m"/"[0m[2m)[0m                             [2m│[0m [2m"/" ∈ {"-r", "/other/path"} [0m[2m→[0m [33mno[0m
                   [2m…[0m[2m)[0m[2m)[0m[2m)[0m                                       [2m│[0m
                                                              [2m│[0m
  [2m29: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"rm"[0m[2m)[0m                                    [2m│[0m
        [2m([0m[34margs[0m                                                 [2m│[0m
         [2m([0m[34mwhen[0m [2m([0mand                                           [2m│[0m
                [2m([0mor                                           [2m│[0m
                 [2m([0mhas                                         [2m│[0m [33mno[0m
                  [2m[[0m[38;2;120;120;255m:claude-code/permission-mode[0m               [2m│[0m
                   [32m"acceptEdits"[0m[2m][0m[2m)[0m                            [2m│[0m
                 [2m([0mhas [2m[[0m[38;2;120;120;255m:opencode/agent[0m                        [2m│[0m [2m"build" [0m[2m→[0m [1;32myes[0m
                       [32m"build"[0m[2m][0m[2m)[0m[2m)[0m                             [2m│[0m
                [2m([0m[34manywhere[0m [32m"-r"[0m                                [2m│[0m
                          [32m"--recursive"[0m[2m)[0m[2m)[0m                     [2m│[0m
           [2m([0m[34mcond[0m                                              [2m│[0m
             [2m([0m[2m([0m[34manywhere[0m [2m([0mregex                                [2m│[0m
                         [32m"^/tmp/.*"[0m[2m)[0m[2m)[0m                         [2m│[0m
              [2m…[0m[2m)[0m                                              [2m│[0m
             [2m([0m[34meffect[0m                                          [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"Recursive deletion requires confirmation"[0m
              [38;2;120;120;255m:ask[0m                                            [2m│[0m
              [32m"Recursive deletion requires confirmation"[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m [2m│[0m

[1mResult[0m

  [4;33mrm -r /other/path[0m

  [2m→[0m [1;33m:ask[0m [32m"Recursive deletion requires confirmation"[0m

  config: <config-path>
