tests/snapshots/oracle_trace_v1__rm_recursive_build_other_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                                       command │ rm -r /other/path
                                                         facts │ :opencode/agent "build"
  24: (rule (command "rm")                                     │
            (args (and (and (anywhere                          │
                              "-r")                            │ "-r" ∈ {"-r", "/other/path"} → yes
                            (anywhere                          │
                              "/"))                            │ "/" ∈ {"-r", "/other/path"} → no
                       …)))                                    │
                                                               │
  29: (rule                                                    │
        (command "rm")                                         │
        (args                                                  │
          (when                                                │
              (and                                             │
                (or                                            │
                  (has                                         │ no
                    [:claude-code/permission-mode              │
                      "acceptEdits"])                          │
                  (has [:opencode/agent                        │ "build" → yes
                         "build"]))                            │
                (anywhere "-r"                                 │
                          "--recursive"))                      │
            (cond                                              │
              ((anywhere (regex                                │
                           "^/tmp/.*"))                        │
               …)                                              │
              (effect                                          │ → :ask "Recursive deletion requires confirmation"
               :ask                                            │
               "Recursive deletion requires confirmation"))))) │

Result

  rm -r /other/path

  → :ask "Recursive deletion requires confirmation"

  config: <config-path>
