tests/snapshots/oracle_trace_v1__rm_recursive_build_tmp_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

  parser: gnu │

                                                command │ rm -r /tmp/foo
                                                  facts │ :opencode/agent "build"
  24: (rule (command "rm")                              │
        (context (and (or (flag "r")                    │
                          …)                            │
                      (anywhere "/")))                  │
        (effect                                         │ → :deny "Recursive deletion from root"
         :deny "Recursive deletion from root"))         │
                                                        │
  29: (rule (command "rm")                              │
        (args                                           │
         (when (and                                     │
                (build-mode                             │ build-mode → yes
                 (or                                    │
                  (has                                  │ no
                   [:claude-code/permission-mode        │
                    "acceptEdits"])                     │
                  (has [:opencode/agent                 │ "build" → yes
                        "build"])))                     │
                (or (flag "r")                          │
                    …))                                 │
           (if (anywhere (regex                         │
                          "^/tmp/.*"))                  │
               (effect                                  │ → :allow "Deleting tmp files is allowed"
                :allow "Deleting tmp files is allowed") │
             …))))                                      │

Result

  rm -r /tmp/foo

  → :allow "Deleting tmp files is allowed"

  config: <config-path>
