tests/snapshots/oracle_trace_v1__rm_rf_root_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                        command │ rm -rf /
  24: (rule (command "rm")                      │
        (context (and (anywhere                 │
                       "-r"                     │
                       "--recursive")           │
                      (anywhere "/")))          │
        (effect                                 │ → :deny "Recursive deletion from root"
         :deny "Recursive deletion from root")) │

Result

  rm -rf /

  → :deny "Recursive deletion from root"

  config: <config-path>
