tests/snapshots/oracle_trace_v1__ssh_rm_rf_stripped.snap
---
source: tests/oracle_trace_v1.rs
assertion_line: 108
expression: normalised
---

Trace

                                  command │ ssh prod "rm -rf /"
  107: (rule (command "ssh")              │
         (args (positional                │
                [:ssh/host *]             │ facts += :ssh/host "prod"
                (may-i (positional *))))) │ `rm -rf /` → :deny "Recursive deletion from root"

                                        command │ rm -rf /
                                          facts │ :ssh/host "prod", :via "ssh"
  24: (rule (command "rm")                      │
        (context                                │
         (and (anywhere "-r"                    │
                        "--recursive")          │
              (anywhere "/")))                  │
        (effect                                 │ → :deny "Recursive deletion from root"
         :deny "Recursive deletion from root")) │

Result

  ssh prod "rm -rf /"

  → :deny "Recursive deletion from root"

  config: <config-path>
